fixes isseld error spacing

--- a/packages/react-atlas-default-theme/src/TextField/textfield.css
+++ b/packages/react-atlas-default-theme/src/TextField/textfield.css
@@ -38,8 +38,8 @@
 
 .invalid {
 	composes: text-input-invalid from '../styles.css';
+	composes: marg-b-half from '../styles.css';
 }
-
 .invalid + span {
 	color: #bd0a33;
 }
